--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -24,9 +24,10 @@
     "coverage": "vitest --coverage"
   },
   "dependencies": {
-    "@effect/platform-node": "^0.94.0",
-    "@effect/sql-pg": "^0.45.0",
+    "@effect/platform-node": "latest",
+    "@effect/sql-pg": "latest",
     "@effect/platform": "latest",
+    "@effect/experimental": "latest",
     "@effect/sql": "latest",
     "effect": "latest"
   },
