--- a/packages/server/tsconfig.build.json
+++ b/packages/server/tsconfig.build.json
@@ -2,10 +2,9 @@
   "extends": "./tsconfig.src.json",
   "references": [
     { "path": "../domain/tsconfig.build.json" },
-    { "path": "packages/shardManager/tsconfig.build.json" },
-    { "path": "packages/workflow/tsconfig.build.json" },
-    { "path": "packages/database/tsconfig.build.json" },
-    { "path": "packages/domain/tsconfig.build.json" }
+    { "path": "../shardManager/tsconfig.build.json" },
+    { "path": "../workflow/tsconfig.build.json" },
+    { "path": "../database/tsconfig.build.json" }
   ],
   "compilerOptions": {
     "types": ["node"],
