--- a/packages/shardManager/package.json
+++ b/packages/shardManager/package.json
@@ -26,10 +26,11 @@
   "dependencies": {
     "@template/domain": "workspace:^",
     "@template/database": "workspace:^",
-    "@effect/cluster": "^0.46.2",
-    "@effect/workflow": "^0.8.1",
-    "@effect/platform-node": "^0.94.0",
-    "@effect/sql-pg": "^0.45.0",
+    "@template/workflow": "workspace:^",
+    "@effect/cluster": "latest",
+    "@effect/workflow": "latest",
+    "@effect/platform-node": "latest",
+    "@effect/sql-pg": "latest",
     "@effect/platform": "latest",
     "@effect/sql": "latest",
     "effect": "latest"
